<resources>
    <string name="app_name">WaTaCook</string>
    <string name="splash_background_image">Splash background image</string>
    <string name="splash_secondary_title">Let\'s start cooking</string>
    <!--    Login Activity -->
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create account</string>
    <string name="next_time">I\'ll create an account next time!</string>
    <!--Create Account Activity-->
    <string name="full_name">Full name</string>
    <string name="user_name">User name</string>
    <string name="email">Email (required)</string>
    <string name="phone_number">Phone # (optional)</string>
    <string name="password">Password</string>

    <string name="create">Create</string>
    <string name="welcome">Welcome!</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!--    ItemView template -->
    <string name="image_of_logo">image of logo</string>
    <string name="transition_name_logo">TRANSITION_NAME_LOGO</string>
    <string name="search_bar">search_bar</string>
    <string name="title_template_text_long">Chicken parmesan food etc longer pieces of text and so forth</string>
    <string name="title_template_text_short">Chicken parmesan food</string>
    <string name="time_template_text">25 mins</string>
    <string name="servings_template_text">Serves 4</string>

    <!--    Search fragment-->
    <string name="search_fragment_title">What\'s in your fridge?</string>
    <string name="search_fragment_tip">Tip: Have a quick look in your fridge to see which ingredients expire soon!</string>
    <string name="meat">Meat</string>
    <string name="fish">Fish</string>
    <string name="vegetables">Vegetables</string>
    <string name="ingredients">Ingredients</string>
    <string name="dislike_button">dislike_button</string>
    <string name="like_button">like button</string>
    <string name="no_results_p">\nUnfortunately, there are no results for the ingredients you have selected. Try checking the spelling or adding fewer ingredients. Note, it\'s for the main ingredients so it\'s not a good idea to add more than two types of meat!</string>
    <string name="no_results_title">NO RESULTS</string>

    <!--    Recipes adapter-->
    <string name="filled">filled</string>
    <string name="nFilled">not filled</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="please_log_in">Please log in to use this feature :)</string>

    <!--    Easter Egg-->
    <string name="easter_egg">Give Hyun money</string>
    <string name="easter_egg_title">You found it!</string>
    <string name="easter_egg_paragraph">Thank you for your support\n\nMy bank is 농협\nAccount number: 302-1213-34...\n\nHaha, just kidding!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_test">TestActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    Toolbar menu-->
    <string name="user_info">User info</string>
    <string name="reset_favourites">Reset favourites</string>
    <string name="reset_dislikes">Reset dislikes</string>
    <string name="about">About</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="show_dislikes">Show dislikes</string>

    <!--    menu template strings-->
    <string name="full_name_template">Full name: Mr Smith</string>
    <string name="user_name_template">Username: smithAgent101</string>
    <string name="email_address_template">Email address: smithagent@gmail.com</string>
    <string name="phone_number_template">Phone number: 010 1234 5678</string>
    <string name="reset_settings">reset_settings</string>

    <!--    about page-->
    <string name="about_title">What\'s this ABOAT, eh?</string>
    <string name="about_p">As a person who seldom cooked, I often found myself wasting a tremendous amount of food. I would buy lots of ingredients to make a specific dish and then would invariably end up not knowing what to do with the leftover!\n\nThis led to the ingredients waiting in the fridge patiently, until it expired, and would meet its ultimate demise - the bin. Therefore, I created this app to try and reduce food waste and inspire similar people to cook more often!</string>
    <string name="no_results_image_content_description">no_results_activity_background_image</string>
    <string name="please_login_p">Please log in \nto use this feature!</string>

    <!--    feedback page-->
    <string name="feedback_settings">Give feedback</string>
    <string name="feedback_title">Feedback wanted!</string>
    <string name="feedback_paragraph">Hello, thank you for taking the time to test out/use my application. As you can probably tell, it\'s early stages and has a lot of bugs. Some of the bugs I am aware of, others I am not. However, as users (as wonderful as yourself) provide me with constructive feedback, I will slowly but surely catch ALL of them. If you have any suggestions for possible features, I would love to hear them as well. Please email me at <u><b>WaTaCookServices@gmail.com</b></u></string>
    <string name="feedback_nsfaq_title">NSFAQ (Not So FAQ)</string>
    <string name="feedback_preemptive_p">Here are some preemptive answers to your possible questions</string>
    <string name="your_app_sucks_response_a">Err.. that\'s not really a question but I am working hard on it!</string>
    <string name="your_app_sucks_q">Your app sucks</string>
    <string name="feedback_change_info_q">I input my information incorrectly, can I change it?</string>
    <string name="feedback_change_info_a">Unfortunately, that feature is not yet available. Please send me an email with the info you would like to change and I\'ll see what I can do :)</string>
    <string name="feedback_next_implementation_q">What features are you going to implement next?</string>
    <string name="feedback_next_implementation_a">I want to implement a filter feature for favourited recipes and enable users to organise it in a meaningful way (and preserve it).</string>
    <string name="feedback_great_idea_q">I have a great app idea that will make us billionaires. We can split it! Do you want to work with me?</string>
    <string name="feedback_great_idea_a">Sure thing! Click on the link below to send me an email!</string>
    <string name="enter_emailaddresss">Enter email address</string>

</resources>