<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.MainActivity">
    <item
        android:id="@+id/userInfo_settings"
        android:orderInCategory="100"
        android:icon="@drawable/user_login_icon"
        android:title="@string/user_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/feedback_settings"
        android:orderInCategory="200"
        android:icon="@drawable/feedback_icon"
        android:title="@string/feedback_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_dislikes_settings"
        android:orderInCategory="300"
        android:title="@string/show_dislikes"
        app:showAsAction="never" />
    <item
        android:id="@+id/check_updates_settings"
        android:orderInCategory="400"
        android:title="@string/check_for_updates"
        app:showAsAction="never" />
    <item
        android:id="@+id/about_settings"
        android:orderInCategory="500"
        android:title="@string/about"
        app:showAsAction="never" />


</menu>