<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".mainMenuActivities.FeedbackActivity">

        <TextView
            android:id="@+id/activity_feedback_title"
            style="@style/AppTheme.BasicActivity"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/feedback_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activity_feedback_paragraph"
            style="@style/AppTheme.BasicActivity.paragraph"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/feedback_paragraph"
            android:textColor="@color/colorLightGrey"
            android:textSize="@dimen/text_medium_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_feedback_title" />

        <TextView
            android:id="@+id/activity_feedback_nsfaq_title"
            style="@style/AppTheme.BasicActivity"
            android:layout_marginTop="@dimen/margin_medium"
            android:textSize="@dimen/text_medium_large"
            android:text="@string/feedback_nsfaq_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_feedback_paragraph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_feedback_nsfaq_title">

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:text="@string/feedback_preemptive_p"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/your_app_sucks_q"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:text="@string/your_app_sucks_response_a"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/feedback_change_info_q"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:text="@string/feedback_change_info_a"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/feedback_next_implementation_q"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:text="@string/feedback_next_implementation_a"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/feedback_great_idea_q"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_medium_small" />

            <TextView
                style="@style/AppTheme.BasicActivity.paragraph"
                android:text="@string/feedback_great_idea_a"
                android:textColor="@color/colorLightGrey"
                android:textSize="@dimen/text_medium_small" />
            <Button
                android:id="@+id/activity_feedback_email_me_button"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:textColor="@color/white"
                android:text="email me!"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>